fix: shut down browser proxy cleanly