@@ -8,6 +8,8 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.LinkedHashMap;
+import java.util.Map;
 
 /**
  * Forwards the hotel session cookie seen on the Nitro HTTP traffic to a shared file that extensions
@@ -20,6 +22,7 @@ public final class NitroCookieForwarder {
 
     private static final Logger LOG = LoggerFactory.getLogger(NitroCookieForwarder.class);
     private static volatile String lastCookie = "";
+    private static final Map<String, String> COOKIE_JAR = new LinkedHashMap<>();
 
     private NitroCookieForwarder() {
     }
@@ -28,12 +31,12 @@ public final class NitroCookieForwarder {
      * Records a Cookie header seen on the connection. No-op if it is empty or unchanged, or if the
      * shared directory can't be determined (non-Windows).
      */
-    public static void capture(String cookie) {
+    public static synchronized void capture(String cookie) {
         if (cookie == null) {
             return;
         }
         cookie = cookie.trim();
-        if (cookie.isEmpty() || cookie.equals(lastCookie)) {
+        if (cookie.isEmpty()) {
             return;
         }
 
@@ -46,11 +49,29 @@ public final class NitroCookieForwarder {
             final Path dir = Paths.get(localAppData, "xabbo");
             Files.createDirectories(dir);
             final Path file = dir.resolve("bss_cookie.txt");
-            Files.write(file, cookie.getBytes(StandardCharsets.UTF_8));
-            lastCookie = cookie;
+            if (COOKIE_JAR.isEmpty() && Files.exists(file)) {
+                merge(Files.readString(file, StandardCharsets.UTF_8));
+            }
+            merge(cookie);
+            final String merged = COOKIE_JAR.entrySet().stream()
+                    .map(entry -> entry.getKey() + "=" + entry.getValue())
+                    .reduce((left, right) -> left + "; " + right).orElse("");
+            if (merged.equals(lastCookie)) return;
+            Files.writeString(file, merged, StandardCharsets.UTF_8);
+            lastCookie = merged;
             LOG.info("Forwarded hotel session cookie to {}", file);
         } catch (IOException e) {
             LOG.error("Failed to write forwarded cookie", e);
+        }
+    }
+
+    private static void merge(String header) {
+        for (String part : header.split(";")) {
+            final int equals = part.indexOf('=');
+            if (equals <= 0) continue;
+            final String name = part.substring(0, equals).trim();
+            final String value = part.substring(equals + 1).trim();
+            if (!name.isEmpty()) COOKIE_JAR.put(name, value);
         }
     }
 }
